fix: footer on mobile

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -77,6 +77,12 @@ code {
 }
 
 @media screen and (max-width: 667px) {
+  main {
+    display: grid;
+    grid-template-rows: 80px auto auto;
+    align-items: flex-end;
+    grid-gap: 15px;
+  }
   .content-wrapper {
     position: relative;
     top: 0;
